[package]
name = "fourier-bench"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2021"
publish = false

[dev-dependencies]
criterion = "0.3"
fftw = { version = "0.8", default-features = false, features = ["system"] }
# fourier = { path = "../fourier" }
rand = "0.7"
rustfft = "6"

[[bench]]
name = "fft_bench"
harness = false
